Fixed text overflow issue in the header for the mobile view

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -337,6 +337,10 @@ input, textarea {
 }
 
 /*GENERIC STYLING*/
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -572,6 +576,9 @@ footer li:hover {
   }
   .header-text {
     margin-left: 10px;
+  }
+  .header-text p, .header-text h1 {
+    width: 45%;
   }
   .hamburger-menu {
     display: block;
