--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -115,6 +115,10 @@
         margin-left: 10px;
     }
 
+    .header-text p, .header-text h1 {
+        width: 45%;
+    }
+
     .hamburger-menu {
         display: block;
         font-size: 2rem;
